--- a/portfolio.html
+++ b/portfolio.html
@@ -6,21 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g==" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header>
         <nav>
             <ul>
-                <li><a lang="en" href="">WebStudio</a></li>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a lang="en" class="logo link" href="./index.html">WebStudio</a></li>
+                <li><a class="link" href="./index.html">Студия</a></li>
+                <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         </ul>
     </header>
     <main>
@@ -34,47 +38,47 @@
             </ul>
             <ul>
                 <li>
-                    <img src="./images/portfolio/img.jpg" alt="сайт с карточками про людей">
+                    <img src="./images/portfolio/img.jpg" width="370" alt="сайт с карточками про людей">
                     <h3>Технокряк</h3>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/img-1.jpg" alt="двое играют в баскетбол">
+                    <img src="./images/portfolio/img-1.jpg" width="370" alt="двое играют в баскетбол">
                     <h3>Постер New Orlean vs Golden Star</h3>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/img-2.jpg" alt="логотип с рыбой на заднем плане">
+                    <img src="./images/portfolio/img-2.jpg" width="370" alt="логотип с рыбой на заднем плане">
                     <h3>Ресторан Seafood</h3>
                     <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/img-3.jpg" alt="наушники">
+                    <img src="./images/portfolio/img-3.jpg" width="370" alt="наушники">
                     <h3>Проект Prime</h3>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/img-4.jpg" alt="две коробки картонные">
+                    <img src="./images/portfolio/img-4.jpg" width="370" alt="две коробки картонные">
                     <h3>Проект Boxes</h3>
                     <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/img-5.jpg" alt="монитор с сайтом в темной теме">
+                    <img src="./images/portfolio/img-5.jpg" width="370" alt="монитор с сайтом в темной теме">
                     <h3>Inspiration has no Borders</h3>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/img-6.jpg" alt="глянцевый журнал">
+                    <img src="./images/portfolio/img-6.jpg" width="370" alt="глянцевый журнал">
                     <h3>Издание Limited Edition</h3>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/img-7.jpg" alt="бирка с надписью лейбл">
+                    <img src="./images/portfolio/img-7.jpg" width="370" alt="бирка с надписью лейбл">
                     <h3>Проект LAB</h3>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/img-8.jpg" alt="ноутбук и руки">
+                    <img src="./images/portfolio/img-8.jpg" width="370" alt="ноутбук и руки">
                     <h3>Growing Business</h3>
                     <p>Приложение</p>
                 </li>
@@ -82,12 +86,12 @@
         </section>
     </main>
     <footer>
-        <a lang="en" href="">WebStudio</a>
+        <a lang="en" class="logo link" href="./index.html">WebStudio</a>
         <address>
             <ul>
-                <li><a href="https://goo.gl/maps/BEkhHuZWLyBjJodx8" target="_blank" rel="noreferrer noopenerr" >г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+                <li><a class="link" href="https://goo.gl/maps/BEkhHuZWLyBjJodx8" target="_blank" rel="noreferrer noopenerr" >г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+                <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
