--- a/index.html
+++ b/index.html
@@ -16,49 +16,49 @@
     <header>
         <nav>
             <ul>
-                <li><a class="logo link" lang="en" href="./index.html">WebStudio</a></li>
-                <li><a class="link" href="./index.html">Студия</a></li>
-                <li><a class="link" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="link" href="">Контакты</a></li>
+                <li><a class="logo link" lang="en" href="./index.html">Web<span class="logo-dark">Studio</span></a></li>
+                <li><a class="link current nav" href="./index.html">Студия</a></li>
+                <li><a class="link nav" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link nav" href="">Контакты</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link upper-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="link upper-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         </ul>
     </header>
 
     <main>
         <!-- HERO -->
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="hero">
+            <h1 class="hero-h1">Эффективные решения для вашего бизнеса</h1>
+            <button class="hero-button" type="button">Заказать услугу</button>
         </section>
         <!--FEATURES-->
-        <section>
+        <section class="features">
             <h2 hidden>Наши преимущества</h2>
             <ul>
                 <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="features-header">Внимание к деталям</h3>
+                    <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="features-header">Пунктуальность</h3>
+                    <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3 class="features-header">Планирование</h3>
+                    <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="features-header">Современные технологии</h3>
+                    <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <!--WEDO-->
         <section>
-            <h2>Чем мы занимаемся</h2>
+            <h2 class="header-section">Чем мы занимаемся</h2>
             <ul>
                 <li><img src="./images/box_1.jpg" alt="человек работает по планшету с клавиатурой" width="370" height="295"></li>
                 <li><img src="./images/box_2.png" alt="человек смотрит в телефон пока сидит за компьютером" width="370" height="295"></li>
@@ -67,43 +67,43 @@
         </section>
         <section>
             <!--TEAM-->
-            <h2>Наша команда</h2>
+            <h2 class="header-section">Наша команда</h2>
             <ul>
-                <li>
+                <li class="card">
                     <img src="./images/people/igor.jpg" alt="игорь в очках с бородой улыбается" width="270" height="260">
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <h3 class="card-header">Игорь Демьяненко</h3>
+                    <p class="card-text" lang="en">Product Designer</p>
 
                 </li>
-                <li>
+                <li class="card">
                     <img src="./images/people/olga.jpg" alt="ольга в очках улыбается" width="270" height="260">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <h3 class="card-header">Ольга Репина</h3>
+                    <p class="card-text" lang="en">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="card">
                     <img src="./images/people/nick.jpg" alt="николай улыбается" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <h3 class="card-header">Николай Тарасов</h3>
+                    <p class="card-text" lang="en">Marketing</p>
                 </li>
-                <li>
+                <li class="card">
                     <img src="./images/people/michal.jpg" alt="михаил немного улыбается" width="270" height="260">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <h3 class="card-header">Михаил Ермаков</h3>
+                    <p class="card-text" lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a lang="en" class="logo link " href="./index.html">WebStudio</a>
+        <a lang="en" class="logo link " href="./index.html">Web<span class="logo-light">Studio</span></a>
         <address>
             <ul>
-                <li><a class="link" href="https://goo.gl/maps/BEkhHuZWLyBjJodx8" target="_blank" rel="noreferrer noopenerr" >г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-                <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                <li><a class="link address" href="https://goo.gl/maps/BEkhHuZWLyBjJodx8" target="_blank" rel="noreferrer noopenerr" >г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a class="link bottom-contacts" href="mailto:info@example.com">info@example.com</a></li>
+                <li><a class="link bottom-contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
 
 </body>
 
-</html>
+</html> class= "features-header"
