--- a/portfolio.html
+++ b/portfolio.html
@@ -16,82 +16,82 @@
     <header>
         <nav>
             <ul>
-                <li><a lang="en" class="logo link" href="./index.html">WebStudio</a></li>
-                <li><a class="link" href="./index.html">Студия</a></li>
-                <li><a class="link" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="link" href="">Контакты</a></li>
+                <li><a class="logo link" lang="en" href="./index.html">Web<span class="logo-dark">Studio</span></a></li>
+                <li><a class="link nav" href="./index.html">Студия</a></li>
+                <li><a class="link current nav" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link nav" href="">Контакты</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link upper-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="link upper-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         </ul>
     </header>
     <main>
         <section>
             <ul>
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+                <li><button class="filter-button" type="button">Все</button></li>
+                <li><button class="filter-button" type="button">Веб-сайты</button></li>
+                <li><button class="filter-button" type="button">Приложения</button></li>
+                <li><button class="filter-button" type="button">Дизайн</button></li>
+                <li><button class="filter-button" type="button">Маркетинг</button></li>
             </ul>
             <ul>
                 <li>
                     <img src="./images/portfolio/img.jpg" width="370" alt="сайт с карточками про людей">
-                    <h3>Технокряк</h3>
-                    <p>Веб-сайт</p>
+                    <h3 class="card-header-portfolio">Технокряк</h3>
+                    <p class="card-text-portfolio">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-1.jpg" width="370" alt="двое играют в баскетбол">
-                    <h3>Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
+                    <h3 class="card-header-portfolio">Постер New Orlean vs Golden Star</h3>
+                    <p class="card-text-portfolio">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-2.jpg" width="370" alt="логотип с рыбой на заднем плане">
-                    <h3>Ресторан Seafood</h3>
-                    <p>Приложение</p>
+                    <h3 class="card-header-portfolio">Ресторан Seafood</h3>
+                    <p class="card-text-portfolio">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-3.jpg" width="370" alt="наушники">
-                    <h3>Проект Prime</h3>
-                    <p>Маркетинг</p>
+                    <h3 class="card-header-portfolio">Проект Prime</h3>
+                    <p class="card-text-portfolio">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-4.jpg" width="370" alt="две коробки картонные">
-                    <h3>Проект Boxes</h3>
-                    <p>Приложение</p>
+                    <h3 class="card-header-portfolio">Проект Boxes</h3>
+                    <p class="card-text-portfolio">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-5.jpg" width="370" alt="монитор с сайтом в темной теме">
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
+                    <h3 class="card-header-portfolio">Inspiration has no Borders</h3>
+                    <p class="card-text-portfolio">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-6.jpg" width="370" alt="глянцевый журнал">
-                    <h3>Издание Limited Edition</h3>
+                    <h3 class="card-header-portfolio">Издание Limited Edition</h3>
                     <p>Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-7.jpg" width="370" alt="бирка с надписью лейбл">
-                    <h3>Проект LAB</h3>
-                    <p>Маркетинг</p>
+                    <h3 class="card-header-portfolio">Проект LAB</h3>
+                    <p class="card-text-portfolio">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-8.jpg" width="370" alt="ноутбук и руки">
-                    <h3>Growing Business</h3>
-                    <p>Приложение</p>
+                    <h3 class="card-header-portfolio">Growing Business</h3>
+                    <p class="card-text-portfolio">Приложение</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a lang="en" class="logo link" href="./index.html">WebStudio</a>
+        <a lang="en" class="logo link " href="./index.html">Web<span class="logo-light">Studio</span></a>
         <address>
             <ul>
-                <li><a class="link" href="https://goo.gl/maps/BEkhHuZWLyBjJodx8" target="_blank" rel="noreferrer noopenerr" >г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-                <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                <li><a class="link address" href="https://goo.gl/maps/BEkhHuZWLyBjJodx8" target="_blank" rel="noreferrer noopenerr" >г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a class="link bottom-contacts" href="mailto:info@example.com">info@example.com</a></li>
+                <li><a class="link bottom-contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
