no meaningless properties

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,28 +15,28 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="list">
                 <li><a class="logo link" lang="en" href="./index.html">Web<span class="logo-dark">Studio</span></a></li>
                 <li><a class="link nav" href="./index.html">Студия</a></li>
                 <li><a class="link current nav" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="link nav" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="list">
             <li><a class="link upper-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
             <li><a class="link upper-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         </ul>
     </header>
     <main>
         <section>
-            <ul>
+            <ul class="list">
                 <li><button class="filter-button" type="button">Все</button></li>
                 <li><button class="filter-button" type="button">Веб-сайты</button></li>
                 <li><button class="filter-button" type="button">Приложения</button></li>
                 <li><button class="filter-button" type="button">Дизайн</button></li>
                 <li><button class="filter-button" type="button">Маркетинг</button></li>
             </ul>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/portfolio/img.jpg" width="370" alt="сайт с карточками про людей">
                     <h3 class="card-header-portfolio">Технокряк</h3>
@@ -87,8 +87,8 @@
     </main>
     <footer>
         <a lang="en" class="logo link " href="./index.html">Web<span class="logo-light">Studio</span></a>
-        <address>
-            <ul>
+        <address class="general-adress">
+            <ul class="list">
                 <li><a class="link address" href="https://goo.gl/maps/BEkhHuZWLyBjJodx8" target="_blank" rel="noreferrer noopenerr" >г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a class="link bottom-contacts" href="mailto:info@example.com">info@example.com</a></li>
                 <li><a class="link bottom-contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
