--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="list">
                 <li><a class="logo link" lang="en" href="./index.html">Web<span class="logo-dark">Studio</span></a></li>
                 <li><a class="link current nav" href="./index.html">Студия</a></li>
                 <li><a class="link nav" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="link nav" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="list">
             <li><a class="link upper-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
             <li><a class="link upper-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         </ul>
@@ -37,7 +37,7 @@
         <!--FEATURES-->
         <section class="features">
             <h2 hidden>Наши преимущества</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <h3 class="features-header">Внимание к деталям</h3>
                     <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -59,7 +59,7 @@
         <!--WEDO-->
         <section>
             <h2 class="header-section">Чем мы занимаемся</h2>
-            <ul>
+            <ul class="list">
                 <li><img src="./images/box_1.jpg" alt="человек работает по планшету с клавиатурой" width="370" height="295"></li>
                 <li><img src="./images/box_2.png" alt="человек смотрит в телефон пока сидит за компьютером" width="370" height="295"></li>
                 <li><img src="./images/box_3.jpg" alt="человек смотрит в планшет с палитрой оттенков радуги" width="370" height="295"></li>
@@ -68,7 +68,7 @@
         <section>
             <!--TEAM-->
             <h2 class="header-section">Наша команда</h2>
-            <ul>
+            <ul class="list">
                 <li class="card">
                     <img src="./images/people/igor.jpg" alt="игорь в очках с бородой улыбается" width="270" height="260">
                     <h3 class="card-header">Игорь Демьяненко</h3>
@@ -95,8 +95,8 @@
     </main>
     <footer>
         <a lang="en" class="logo link " href="./index.html">Web<span class="logo-light">Studio</span></a>
-        <address>
-            <ul>
+        <address class="general-adress">
+            <ul class="list">
                 <li><a class="link address" href="https://goo.gl/maps/BEkhHuZWLyBjJodx8" target="_blank" rel="noreferrer noopenerr" >г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a class="link bottom-contacts" href="mailto:info@example.com">info@example.com</a></li>
                 <li><a class="link bottom-contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
@@ -106,4 +106,4 @@
 
 </body>
 
-</html> class= "features-header"
+</html>
