--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <a lang="en" class="logo link " href="./index.html">Web<span class="logo-light">Studio</span></a>
         <address class="general-adress">
             <ul class="list">
