--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,7 @@
     </header>
     <main>
         <section>
+            <h1 hidden>Наши работы</h1>
             <ul class="list">
                 <li><button class="filter-button" type="button">Все</button></li>
                 <li><button class="filter-button" type="button">Веб-сайты</button></li>
@@ -39,47 +40,47 @@
             <ul class="list">
                 <li>
                     <img src="./images/portfolio/img.jpg" width="370" alt="сайт с карточками про людей">
-                    <h3 class="card-header-portfolio">Технокряк</h3>
+                    <h2 class="card-header-portfolio">Технокряк</h2>
                     <p class="card-text-portfolio">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-1.jpg" width="370" alt="двое играют в баскетбол">
-                    <h3 class="card-header-portfolio">Постер New Orlean vs Golden Star</h3>
+                    <h2 class="card-header-portfolio">Постер New Orlean vs Golden Star</h2>
                     <p class="card-text-portfolio">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-2.jpg" width="370" alt="логотип с рыбой на заднем плане">
-                    <h3 class="card-header-portfolio">Ресторан Seafood</h3>
+                    <h2 class="card-header-portfolio">Ресторан Seafood</h2>
                     <p class="card-text-portfolio">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-3.jpg" width="370" alt="наушники">
-                    <h3 class="card-header-portfolio">Проект Prime</h3>
+                    <h2 class="card-header-portfolio">Проект Prime</h2>
                     <p class="card-text-portfolio">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-4.jpg" width="370" alt="две коробки картонные">
-                    <h3 class="card-header-portfolio">Проект Boxes</h3>
+                    <h2 class="card-header-portfolio">Проект Boxes</h2>
                     <p class="card-text-portfolio">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-5.jpg" width="370" alt="монитор с сайтом в темной теме">
-                    <h3 class="card-header-portfolio">Inspiration has no Borders</h3>
+                    <h2 class="card-header-portfolio">Inspiration has no Borders</h2>
                     <p class="card-text-portfolio">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-6.jpg" width="370" alt="глянцевый журнал">
-                    <h3 class="card-header-portfolio">Издание Limited Edition</h3>
+                    <h2 class="card-header-portfolio">Издание Limited Edition</h2>
                     <p>Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-7.jpg" width="370" alt="бирка с надписью лейбл">
-                    <h3 class="card-header-portfolio">Проект LAB</h3>
+                    <h2 class="card-header-portfolio">Проект LAB</h2>
                     <p class="card-text-portfolio">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/portfolio/img-8.jpg" width="370" alt="ноутбук и руки">
-                    <h3 class="card-header-portfolio">Growing Business</h3>
+                    <h2 class="card-header-portfolio">Growing Business</h2>
                     <p class="card-text-portfolio">Приложение</p>
                 </li>
             </ul>
